--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
         </plugins>
     </build>
 
-
     <groupId>groupId</groupId>
     <artifactId>ontology</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -27,6 +26,12 @@
             <groupId>net.sourceforge.owlapi</groupId>
             <artifactId>owlapi-distribution</artifactId>
             <version>4.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.6.0</version>
         </dependency>
     </dependencies>
 
